<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name"><xliff:g id="app_name">DoliDroid</xliff:g></string>
    <string name="dolidroidLabel">DoliDroid, Android front-end for Dolibarr ERP-CRM</string>
    <string name="dolidroidUserAgent">DoliDroid - Android front-end for Dolibarr ERP-CRM</string>
    
    <!-- Activity main -->
    <string name="title_activity_main"><xliff:g id="title_activity_main">DoliDroid</xliff:g></string>
    <string name="dolibarr_for_android">Android client for Dolibarr</string>
    <string name="open">Start</string>
    <string name="dolibarr_url">Dolibarr URL</string>
    <string name="logo_dolidroid">Logo DoliDroid</string>
    <string name="SelectUrl">or select a favorite connection</string>
    <string name="enterNewUrl">or enter a new URL</string>
    <string name="UrlCopied">URL copied into clipboard</string>

    <!-- Activity web -->
    <string name="title_activity_second"></string>
    <string name="downloadComplete">Download of file complete</string>
	<string name="NoPreviousPageAgainToQuit">No previous page. Use back again to quit.</string>
	<string name="notCompatibleWithVersion">Dolibarr version on server (%1$s) is too old. DoliDroid need Dolibar version %2$s or higher.</string>
    <string name="notification_error_ssl_cert_invalid">Server security SSL Certificate seems invalid:</string>
    <string name="notification_error_ssl_cert_invalidbis">Do you want to continue (download of files would not be possible) ?</string>
    <string name="failedtogetpage">Failed to get page by a fast direct download. Are you logged ?</string>
    <string name="CacheAndHistoryCleared">Cache and history cleared.</string>

    <!-- Activity about -->
    <string name="title_activity_about"></string>
    <string name="textBack">Back</string>
    <string name="textMenu">Menu</string>
    <string name="textAboutA"><xliff:g id="textAboutA">Versions...</xliff:g></string>
    <string name="textAboutB"><xliff:g id="textAboutB">Instance Url...</xliff:g></string>
    <string name="textAboutB2"><xliff:g id="textAboutB2">Saved Logins...</xliff:g></string>
    <string name="textAboutC"><xliff:g id="textAboutC">CurrentURL and user agent...</xliff:g></string>
    <string name="Version">Version</string>
    <string name="VersionStaticResources">Version of local static resources</string>
    <string name="Author">Author</string>
    <string name="ApplicationAssociatedWithMailToLink">Application associated with "mailto" links</string>
    <string name="ApplicationAssociatedWithTelLink">Application associated with "tel" links</string>
    <string name="Web">Web</string>
    <string name="Compatibility">Compatibility</string>
    <string name="License">License</string>
    <string name="NameOfSourceStore">Source store of installation</string>
    <string name="Sources">Sources</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="DeviceAPILevel">Device API Level</string>
    <string name="DeviceHasMenuHardware">Device has hardware buttons</string>
    <string name="DeviceHasDownloadManager">Device has a download manager</string>
    <string name="DownloadDirectory">Download directory</string>
    <string name="PhotosDirectory">Photos directory</string>
    <string name="DocumentsDirectory">Documents directory</string>
    <string name="DeviceHasPDFViewer">Device has PDF viewers</string>
    <string name="DeviceHasODXViewer">Device has OpenOffice viewers</string>
    <string name="DeviceSize">Device screen size</string>
    <string name="savedDolUrlRoot">Dolibarr instance Url</string>
    <string name="currentUrl">Current connection</string>
    <string name="UserAgent">User Agent</string>
    <string name="SavedLogin">Saved login</string>
    <string name="SavedPassword">Saved password</string>
    <string name="BasicAuthLogin">Basic auth login</string>
    <string name="BasicAuthPassword">Basic auth password</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Warning">Warning</string>

    <!-- Activity Manage URL -->
    <string name="DeletePredefinedUrl">Remove this connection</string>
    <string name="DeleteAllPredefinedUrl">Remove all favorites connections</string>
    <string name="ListOfUrls">List of predefined connections</string>

    <!-- Menu main + web -->
    <string name="menu_info">About DoliDroid</string>
    <string name="menu_instance">About current instance</string>
    <string name="menu_info_short">About</string>
    <string name="menu_info_instance_short">About instance</string>
    <string name="menu_show_bar_on">Show menu bar</string>
    <string name="menu_show_bar_off">Show menu bar (no)</string>
    <string name="menu_autofill_on">Save login/password</string>
    <string name="menu_autofill_off">Save login/password (no)</string>
    <string name="menu_uselocalresources_on">Use local static resources</string>
    <string name="menu_uselocalresources_off">Use local static resources (no)</string>
    <string name="AlertHTTPS">It seems your server forced a redirect to a HTTPS page. Please check your Dolibarr URL and use the https URL form directly (URL starting with https:// instead of http://). Keeping using an URL without the s will result, for security purposes, in features not working like cache optimization or downloading files.</string>
    <string name="AlertHTTP">You try to access a not secured web site (http: instead of https:). For security reason, Android may restrict some features into this app for such web sites. You should secure your website by adding a HTTPS certificate.</string>
    <string name="AlertDownloadBadHTTPS">Download is not possible when you used a bad value of scheme to connect (http vs https)</string>

    <!-- Menu main page -->
    <string name="menu_utilities">Utilities</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_url">Add predefined URL</string>
    <string name="menu_remove_url">Remove a favorite connection</string>
    <string name="menu_clear_all_urls">Clear favorites connections</string>
    <string name="menu_manage_all_urls">Manage favorites connections</string>
    <string name="dolicloud_register" ignore="MissingTranslation"><a href="https://myaccount.dolicloud.com/register.php?origin=dolidroid&amp;utm_source=dolidroid&amp;utm_campaign=none&amp;utm_medium=mobile">I don\'t have a Dolibarr instance yet, I create one on DoliCloud.com...</a></string>

    <!-- Menu web browser -->
    <string name="menu_menu">Menu</string>
    <string name="menu_go_to">Quick access</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_back">Back</string>
    <string name="menu_refresh">Reload page</string>
    <string name="menu_copy_url">Copy URL into clipboard</string>
    <string name="menu_clearcache">Clear cache</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_multicompany">Switch company</string>
    <string name="menu_uploadfile">Import or scan a document</string>
    <string name="menu_usercard">My user file</string>
    <string name="menu_virtualcard">My virtual business card</string>
    <string name="menu_scan">Scan a barcode</string>
    <string name="menu_photo">Scan a document</string>
    <string name="None">None</string>
    <string name="TargetSDKVersion">Target SDK Level</string>
    <string name="defaultURL">Default URL</string>
    <string name="defaultURLDesc">The default URL to connect to, suggested on first screen.\nUsing another URL still remain possible.</string>

</resources>
