<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- List of predefined icon on: http://androiddrawableexplorer.appspot.com/ -->

	<item
		android:id="@+id/menu_menu"
		android:icon="@mipmap/ic_action_menu"
		android:orderInCategory="10"
		android:showAsAction="always"
		android:title="@string/menu_menu" />

	<item
		android:id="@+id/menu_search"
		android:icon="@mipmap/ic_action_search"
		android:orderInCategory="20"
		android:showAsAction="always"
		android:title="@string/menu_go_to" />
	<item
		android:id="@+id/menu_bookmarks"
		android:icon="@drawable/ic_baseline_star_border_24"
		android:orderInCategory="22"
		android:showAsAction="always"
		android:title="@string/menu_bookmarks" />
	<item
		android:id="@+id/menu_back"
		android:icon="@mipmap/ic_action_back"
		android:orderInCategory="30"
		android:showAsAction="always"
		android:title="@string/menu_back" />
	<item
		android:id="@+id/menu_scan"
		android:icon="@drawable/ic_baseline_star_border_24"
		android:orderInCategory="40"
		android:title="@string/menu_scan"
		android:visible="false" />
	<item
		android:id="@+id/menu_photo"
		android:icon="@drawable/ic_baseline_star_border_24"
		android:orderInCategory="41"
		android:title="@string/menu_photo"
		android:visible="false" />
	<item
		android:id="@+id/menu_multicompany"
		android:icon="@mipmap/ic_action_multicompany"
		android:orderInCategory="50"
		android:title="@string/menu_multicompany" />
	<item
		android:id="@+id/menu_usercard"
		android:icon="@drawable/ic_baseline_badge_24"
		android:orderInCategory="60"
		android:title="@string/menu_usercard" />
	<item
		android:id="@+id/menu_virtualcard"
		android:icon="@drawable/ic_baseline_badge_24"
		android:orderInCategory="62"
		android:title="@string/menu_virtualcard" />

	<!--
	<item
		android:id="@+id/quit"
		android:icon="@drawable/ic_baseline_exit_to_app_24"
		android:menuCategory="secondary"
		android:orderInCategory="210"
		android:showAsAction="ifRoom|withText"
		android:title="@string/menu_quit" />
	-->

	<item
		android:id="@+id/menu_utilities"
		android:menuCategory="secondary"
		android:orderInCategory="290"
		android:title="@string/menu_utilities">
		<menu android:id="@+id/submenu_utilities">
			<item android:id="@+id/clearcache"
				android:title="@string/menu_clearcache"
				android:icon="@android:drawable/ic_menu_close_clear_cancel"
				android:menuCategory="secondary"
				android:orderInCategory="140"
				/>
			<item android:id="@+id/refresh"
				android:title="@string/menu_refresh"
				android:icon="@android:drawable/ic_menu_rotate"
				android:menuCategory="secondary"
				android:orderInCategory="150"
				/>
			<item
				android:id="@+id/menu_copy_url"
				android:title="@string/menu_copy_url"
				android:icon="@android:drawable/alert_dark_frame"
				android:menuCategory="secondary"
				android:orderInCategory="160"
				/>
			<item android:id="@+id/menu_aboutinstance"
				android:menuCategory="secondary"
				android:orderInCategory="500"
				android:showAsAction="withText"
				android:title="@string/menu_instance"
				android:titleCondensed="@string/menu_info_instance_short" />
		</menu>
	</item>



	<item
		android:id="@+id/menu_settings"
		android:menuCategory="secondary"
		android:orderInCategory="300"
		android:title="@string/menu_settings">
		<menu android:id="@+id/submenu_second">
			<item
				android:id="@+id/always_show_bar"
				android:checkable="true"
				android:menuCategory="secondary"
				android:orderInCategory="130"
				android:title="@string/menu_show_bar_on"
				android:visible="false" />
			<item
				android:id="@+id/always_autofill"
				android:checkable="true"
				android:menuCategory="secondary"
				android:orderInCategory="135"
				android:title="@string/menu_autofill_on" />
			<item
				android:id="@+id/always_uselocalresources"
				android:checkable="true"
				android:menuCategory="secondary"
				android:orderInCategory="137"
				android:title="@string/menu_uselocalresources_on" />
			<!--<item
				android:id="@+id/clear_all_urls"
				android:menuCategory="secondary"
				android:orderInCategory="138"
				android:title="@string/menu_clear_all_urls" />
			-->
			<item
				android:id="@+id/manage_all_urls"
				android:menuCategory="secondary"
				android:orderInCategory="139"
				android:title="@string/menu_manage_all_urls" />
			<item android:id="@+id/about"
				android:menuCategory="secondary"
				android:orderInCategory="500"
				android:showAsAction="withText"
				android:title="@string/menu_info"
				android:titleCondensed="@string/menu_info_short" />
		</menu>
	</item>


	<item android:id="@+id/menu_logout"
		android:icon="@android:drawable/ic_lock_power_off"
		android:menuCategory="secondary"
		android:orderInCategory="500"
		android:showAsAction="withText"
		android:title="@string/menu_logout"
		/>

</menu>
