<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="wrap_content">

<RelativeLayout 
    
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:theme="@style/DoliDroidThemeFirst" >

	<TextView
        android:id="@+id/TextAbout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:maxLines="20"
        android:text="@string/textAboutA"
        android:textSize="14sp"
        tools:context=".MainActivity" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo_dolidroid"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/dolibarr_for_android"
        tools:context=".MainActivity" />

</RelativeLayout>

</ScrollView>
