<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:theme="@style/DoliDroidThemeFirst"
    tools:context=".ManageURLActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutManageUrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="4dp"
        android:theme="@style/DoliDroidThemeFirst">

        <ImageView
            android:id="@+id/imageTop"
            android:layout_width="48dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/logo_dolidroid"
            android:foregroundTint="#009688"
            android:src="@drawable/ic_baseline_storage_24"
            tools:ignore="ImageContrastCheck"
            tools:visibility="visible" />

        <ListView
            android:id="@+id/listViewConnections"
            android:layout_width="wrap_content"
            android:layout_height="276dp"
            android:layout_below="@id/textListOfUrlsTitle"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="14dp"
            android:clickable="true"
            android:focusable="true"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/TextSavedLogins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextInstanceURLTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:lineSpacingExtra="8sp"
            android:maxLines="50"
            android:text="@string/textAboutB2"
            android:textSize="16sp"
            tools:context=".ManageURLActivity" />

        <TextView
            android:id="@+id/textAboutAndroidClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/dolibarr_for_android"
            android:textColor="@color/grey"
            tools:context=".ManageURLActivity"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/TextInstanceURLTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textListOfCurrentUrl"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="18dp"
            android:maxLines="50"
            android:text="@string/textAboutB"
            android:textSize="16sp"
            tools:context=".ManageURLActivity" />

        <TextView
            android:id="@+id/textListOfUrlsTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextSavedLogins"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="18dp"
            android:maxLines="50"
            android:text="@string/ListOfUrls"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:context=".ManageURLActivity" />

        <TextView
            android:id="@+id/textListOfUrlsTitle2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textListOfUrlsTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            android:maxLines="50"
            android:text="@string/None"
            android:textSize="16sp"
            tools:context=".ManageURLActivity" />

        <TextView
            android:id="@+id/textListOfCurrentUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageTop"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="18dp"
            android:maxLines="50"
            android:text="@string/currentUrl"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:context=".ManageURLActivity" />

    </RelativeLayout>

</LinearLayout>
